# physic-labs

./: CMakeLists.txt
include/: Calc.h  constants.h  formulas.h
include/factories/: LabFactory.h
include/fstream/: FStream.h
include/fstream/csv/: Fcsv.h
include/graphics/: Decart.h  Graphic.h  IGraphic.h  IRender.h  Scene.h
include/graphics/render/: SFMLRender.h
include/labs/: ExperimentStruct.h  LabStruct.h
include/labs/lab1/: Lab1.h  Lab1Calc.h  Lab1Const.h  Lab1Error.h  Lab1Exp.h
include/labs/lab2(1)/: Lab2.h  Lab2Calc.h  Lab2Const.h  Lab2Error.h  Lab2Exp.h
include/labs/lab4/: Lab4.h  Lab4Calc.h  Lab4Const.h  Lab4Error.h  Lab4Exp.h
include/tokens/lab/: ExperimentToken.h  LabToken.h
src/: Calc.cpp  LabFactory.cpp  main.cpp
src/fstream/csv/: Fcsv.cpp
src/graphics/: Decart.cpp  Graphic.cpp  Scene.cpp
src/graphics/render/: SFMLRender.cpp
src/labs/: LabStruct.cpp
src/labs/lab1/: Lab1.cpp  Lab1Calc.cpp  Lab1Const.cpp  Lab1Error.cpp  Lab1Exp.cpp
src/labs/lab2(1)/: Lab2.cpp  Lab2Calc.cpp  Lab2Const.cpp  Lab2Error.cpp  Lab2Exp.cpp
src/labs/lab4/: Lab4.cpp  Lab4Calc.cpp  Lab4Const.cpp  Lab4Error.cpp  Lab4Exp.cpp
src/tokens/: ExperimentToken.cpp  LabToken.cpp
