cmake_minimum_required(VERSION 3.16) 
project(physic-labs)

list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.2
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

add_executable(${PROJECT_NAME}
    src/main.cpp
    src/Calc.cpp
    src/LabFactory.cpp
    src/fstream/csv/Fcsv.cpp
    src/labs/LabStruct.cpp
    src/labs/lab2\(1\)/Lab2.cpp
    src/labs/lab2\(1\)/Lab2Exp.cpp
    src/labs/lab2\(1\)/Lab2Calc.cpp
    src/labs/lab2\(1\)/Lab2Error.cpp
    src/tokens/LabToken.cpp
    src/tokens/ExperimentToken.cpp
)


target_link_libraries(${PROJECT_NAME} PRIVATE SFML::Graphics)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")

set_target_properties(${PROJECT_NAME} PROPERTIES
    CXX_STANDARD 20
    CXX_STANDARD_REQUIRED ON
)
